# sui_faucet_devnet

./: Cargo.toml  README.md
src/: main.rs
