[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui" }
sui-keys = { git = "https://github.com/MystenLabs/sui" }
sui-faucet = { git = "https://github.com/MystenLabs/sui" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
anyhow = { version = "1.0.64", features = ["backtrace"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "f451422b7f15e75e055a1830cbe5d1547fa87b74" }
dirs = "4.0.0"